# OncoLib

./: CMakeLists.txt  Doxyfile.in  README.md
example/: example.ipynb  example.sh
src/: basematrix.cpp  basematrix.h  basetree.h  bronkerbosch.cpp  cell.h  clonetree.cpp  clonetree.h  downsamplemain.cpp  enumeratemain.cpp  enumeratemutationtrees.cpp  enumeratemutationtrees.h  frequencymatrix.cpp  frequencymatrix.h  generatemixture.cpp  generatemixture.h  graph2dotmain.cpp  migrationgraph.h  mixmain.cpp  mutclonetree.cpp  mutclonetree.h  python.cpp  readmatrix.cpp  readmatrix.h  reads2freqsmain.cpp  sequencemain.cpp  simulatemain.cpp  simulation.cpp  simulation.h  tree2dotmain.cpp  tree2freqsmain.cpp  utils.h
src/cluster/: cluster.cpp  cluster.h  clustermain.cpp  preclustermain.cpp
src/spruce/: enumeratemain.cpp  enumeratemutationtrees.cpp  enumeratemutationtrees.h  rootedcladisticancestrygraph.cpp  rootedcladisticancestrygraph.h  rootedcladisticenumeration.cpp  rootedcladisticenumeration.h  rootedcladisticnoisyenumeration.cpp  rootedcladisticnoisyenumeration.h  solutionset.cpp  solutionset.h  statetree.cpp  statetree.h
